build!: add database save to health page, synchronize locales, fix locale error, update npm dependencies versions

--- a/app/locales/ar-SA.json
+++ b/app/locales/ar-SA.json
@@ -1,52 +1,79 @@
 {
+  "pages": {
+    "auth": {
+      "login": "تسجيل الدخول",
+      "register": "التسجيل",
+      "goToRegister": "سجل",
+      "goToLogin": "تسجيل الدخول",
+      "email": "البريد الإلكتروني",
+      "password": "كلمة المرور",
+      "passwordConfirm": "تأكيد كلمة المرور",
+      "acceptPrivacy": "أوافق على",
+      "privacyLink": "سياسة الخصوصية",
+      "rememberMe": "البقاء مسجلاً",
+      "fillEmailPassword": "يرجى ملء البريد الإلكتروني وكلمة المرور.",
+      "loginFailed": "فشل تسجيل الدخول.",
+      "loginSuccess": "تم تسجيل الدخول بنجاح.",
+      "logoutSuccess": "تم تسجيل الخروج بنجاح.",
+      "fillAll": "يرجى ملء جميع الحقول وقبول سياسة الخصوصية.",
+      "registerFailed": "فشل التسجيل.",
+      "registerSuccess": "تم التسجيل بنجاح."
+    }
+  },
   "components": {
+    "authModal": {
+      "title": "قم بتسجيل الدخول!",
+      "description": "عند تسجيل الدخول، يمكنك حفظ واسترجاع بياناتك بسهولة عبر أجهزتك. كل ما تحتاجه هو اسم مستخدم وكلمة مرور.",
+      "go": "متابعة"
+    },
     "chatInterface": {
       "placeholder": "اكتب رسالتك..."
     },
     "clickMenu": {
       "showForm": "عرض نموذج جمع البيانات",
-      "showChat": "عرض واجهة المحادثة"
+      "showChat": "عرض واجهة الدردشة"
     },
     "fileUpload": {
       "title": "قم بتحميل بياناتك",
       "upload": "اختر ملفًا أو اسحبه هنا",
-      "lastLoaded": "تم التحميل آخر مرة"
+      "lastLoaded": "آخر تحميل"
     },
     "header": {
-      "settings": "الإعدادات"
+      "settings": "الإعدادات",
+      "resetConfirmation": "هل أنت متأكد أنك تريد إعادة تعيين جميع الإعدادات والبيانات؟"
     },
     "optionalFields": {
-      "heartRate": "متوسط معدل ضربات القلب",
+      "heartRate": "متوسط معدل نبضات القلب",
       "placeholderHeartRate": "مثال: 76",
       "bloodPressure": "متوسط ضغط الدم",
       "placeholderBloodPressure": "مثال: 120/80",
       "sports": "الرياضات",
       "placeholderSports": "مثال: الجري، السباحة",
       "medications": "الأدوية",
-      "placeholderMedications": "مثال: أسبيرين، باراسيتامول",
+      "placeholderMedications": "مثال: أسبرين، باراسيتامول",
       "chronicDiseases": "الأمراض المزمنة",
       "placeholderChronicDiseases": "مثال: ارتفاع ضغط الدم، السكري",
-      "allergies": "الحساسيات",
-      "placeholderAllergies": "مثال: حبوب اللقاح، الجوز",
+      "allergies": "الحساسية",
+      "placeholderAllergies": "مثال: حبوب اللقاح، جوز",
       "diet": "النظام الغذائي",
-      "placeholderDiet": "مثال: نباتي، خالٍ من الغلوتين",
-      "waterIntake": "كمية الماء اليومية (لتر)",
+      "placeholderDiet": "مثال: نباتي، خالٍ من الجلوتين",
+      "waterIntake": "استهلاك الماء اليومي (لتر)",
       "placeholderWaterIntake": "مثال: 2.5",
-      "familyHistory": "تاريخ العائلة الطبي",
-      "placeholderFamilyHistory": "مثال: أمراض قلب، سرطان",
+      "familyHistory": "التاريخ المرضي العائلي",
+      "placeholderFamilyHistory": "مثال: أمراض القلب، السرطان",
       "smoking": "التدخين",
       "smokingOptions": {
         "selectPlaceholder": "اختر عادة التدخين",
         "never": "أبدًا",
-        "occasionally": "أحيانًا",
-        "regularly": "بشكل منتظم"
+        "occasionally": "من حين لآخر",
+        "regularly": "بانتظام"
       },
       "alcohol": "استهلاك الكحول",
       "alcoholOptions": {
         "selectPlaceholder": "اختر عادة استهلاك الكحول",
         "never": "أبدًا",
-        "occasionally": "أحيانًا",
-        "regularly": "بشكل منتظم"
+        "occasionally": "من حين لآخر",
+        "regularly": "بانتظام"
       },
       "sleep": "النوم (ساعات/يوم)",
       "placeholderSleep": "مثال: 7",
@@ -59,43 +86,49 @@
       "mentalHealth": "الصحة النفسية",
       "placeholderMentalHealth": "مثال: اكتئاب، قلق",
       "cholesterolLevel": "مستوى الكوليسترول",
-      "placeholderCholesterolLevel": "مثال: 200 ملغم/ديسيلتر",
+      "placeholderCholesterolLevel": "مثال: 200 mg/dL",
       "bloodSugarLevel": "مستوى السكر في الدم",
-      "placeholderBloodSugarLevel": "مثال: 100 ملغم/ديسيلتر",
+      "placeholderBloodSugarLevel": "مثال: 100 mg/dL",
       "supplements": "المكملات الغذائية",
-      "placeholderSupplements": "مثال: فيتامين D، أوميغا‑3",
-      "vaccinations": "اللقاحات",
-      "placeholderVaccinations": "مثال: الإنفلونزا، COVID‑19",
+      "placeholderSupplements": "مثال: فيتامين D، أوميغا-3",
+      "vaccinations": "التطعيمات",
+      "placeholderVaccinations": "مثال: الإنفلونزا، COVID-19",
       "reproductiveHealth": "الصحة الإنجابية",
       "placeholderReproductiveHealth": "مثال: الدورة الشهرية، الحمل",
       "visionAndHearing": "البصر والسمع",
-      "placeholderVisionAndHearing": "مثال: قصر النظر، ضعف السمع",
+      "placeholderVisionAndHearing": "مثال: قصر نظر، ضعف السمع",
       "sleepQuality": "جودة النوم",
-      "placeholderSleepQuality": "مثال: جيد، متوسط، ضعيف",
+      "placeholderSleepQuality": "مثال: جيد، متوسط، سيئ",
       "medicalRecords": "السجلات الطبية",
-      "placeholderMedicalRecords": "مثال: تحليل دم، أشعة",
+      "placeholderMedicalRecords": "مثال: فحوصات دم، أشعة سينية",
       "medicalHistory": "التاريخ الطبي",
-      "placeholderMedicalHistory": "مثال: عمليات جراحية، علاجات في المستشفى"
+      "placeholderMedicalHistory": "مثال: عمليات جراحية، علاجات بالمستشفى"
     },
     "privacyModal": {
-      "title": "إشعار الخصوصية",
-      "text1": "ستُستخدم البيانات التي تقدمها فقط من قبل نظام الاستشارات الصحية، ولا تُشارك مع جهات خارجية. يتمّ عدم تخزين بياناتك في النظام؛ يمكنك إدارتها وحفظها على جهازك.",
-      "text2": "بموافقتك على شروط الخصوصية، فإنك تسمح للنظام بتقديم نصائح بناءً على المعلومات التي تقدمها."
+      "title": "إشعار الخصوصية لدينا",
+      "text1": "تُستخدم البيانات التي تقدمها حصريًا من قبل نظام الاستشارات الصحية ولا يتم مشاركتها مع أطراف ثالثة. النظام لا يخزن بياناتك؛ يمكنك إدارتها وتنزيلها على جهازك.",
+      "text2": "بقبول شروط الخصوصية، فإنك توافق على أن يقدم نظامنا نصائح بناءً على المعلومات التي تقدمها."
+    },
+    "privacyModalAuth": {
+      "title": "إشعار الخصوصية لدينا",
+      "text1": "تُستخدم البيانات التي تقدمها حصريًا من قبل نظام الاستشارات الصحية ولا يتم مشاركتها مع أطراف ثالثة. تُخزن بياناتك في قاعدة بيانات MongoDB مُؤمّنة ومهيأة بشكل يحميها من الهجمات المحتملة.",
+      "text2": "بقبول شروط الخصوصية، فإنك توافق على أن يقدم نظامنا نصائح بناءً على المعلومات التي تقدمها."
     },
     "response": {
-      "title": "رد د. Sanovise:",
+      "title": "إجابة د. Sanovise:",
       "analyzing": "أقوم بتحليل البيانات 📚🧠",
       "thinking": "أفكر 🤔"
     },
     "settingsModal": {
       "title": "الإعدادات",
-      "selectLanguage": "اختر اللغة المطلوبة:",
-      "selectAIModel": "اختر نموذج الذكاء الاصطناعي:",
+      "selectLanguage": "اختر اللغة المرغوبة:",
+      "selectAIModel": "اختر نموذج الذكاء الاصطناعي المرغوب:",
       "version": "الإصدار",
-      "deleteAccount": "Delete account",
-      "deleteConfirm": "Are you sure you want to delete your account? This action is permanent.",
-      "deleteSuccess": "Account deleted",
-      "deleteError": "An error occurred while deleting the account"
+      "logout": "تسجيل الخروج",
+      "deleteAccount": "حذف الحساب",
+      "deleteConfirm": "هل أنت متأكد أنك تريد حذف حسابك؟ هذا إجراء نهائي.",
+      "deleteSuccess": "تم حذف الحساب",
+      "deleteError": "حدث خطأ أثناء حذف الحساب"
     },
     "userForm": {
       "requiredInfo": "الحقول الموسومة بـ <span class='required'>*</span> إلزامية!",
@@ -108,20 +141,20 @@
       "weight": "الوزن",
       "placeholderHeight": "مثال: 175",
       "placeholderWeight": "مثال: 70",
-      "showExtra": "إدخال بيانات إضافية",
-      "hideExtra": "إخفاء البيانات الإضافية",
+      "showExtra": "عرض بيانات إضافية",
+      "hideExtra": "إخفاء بيانات إضافية",
       "acceptPrivacy": "أوافق على",
       "privacyLink": "سياسة الخصوصية",
       "submitData": "إرسال البيانات",
-      "abort": "لا ترد",
+      "abort": "عدم الإجابة",
       "exportData": "تصدير البيانات",
-  "healthPage": "الذهاب إلى صفحة الصحة",
+      "healthPage": "صفحة الصحة",
       "invalidHeight": "يجب أن يكون الطول بين 50 سم و300 سم.",
       "invalidWeight": "يجب أن يكون الوزن بين 1 كجم و500 كجم.",
-      "invalidWaterIntake": "يجب أن تكون كمية الماء اليومية بين 0 و50 لتر.",
-      "invalidHeartRate": "يجب أن يكون معدل ضربات القلب بين 30 و250.",
-      "invalidSleep": "يجب أن يكون وقت النوم بين 0 و24 ساعة.",
-      "invalidBloodPressure": "يجب أن يكون ضغط الدم بالشكل: systole/diastole (مثال: 120/80)."
+      "invalidWaterIntake": "يجب أن يكون استهلاك الماء اليومي بين 0 و50 لترًا.",
+      "invalidHeartRate": "يجب أن يكون معدل النبض بين 30 و250.",
+      "invalidSleep": "يجب أن تكون مدة النوم بين 0 و24 ساعة.",
+      "invalidBloodPressure": "يجب أن يكون ضغط الدم بالتنسيق التالي: systole/diastole (مثال: 120/80)."
     }
   },
   "global": {
@@ -131,27 +164,27 @@
     "successShare": "تم الإرسال بنجاح",
     "errorSave": "حدث خطأ أثناء الحفظ.",
     "errorSend": "حدث خطأ أثناء إرسال البيانات",
-    "tryAgain": "يرجى المحاولة مرة أخرى لاحقًا، أو تحديث الصفحة.",
-    "emptyResponse": "لم يتلقَّ الخادم أي رد. قد يكون هناك انقطاع.",
+    "tryAgain": "يرجى المحاولة مرة أخرى لاحقًا أو تحديث الصفحة.",
+    "emptyResponse": "الخادم لم يُرجع أي استجابة. قد يكون هناك انقطاع.",
     "networkError": "خطأ في الشبكة – تحقق من اتصال الإنترنت!",
     "unknownError": "حدث خطأ غير معروف. 😔",
     "errorLoad": "الملف لا يحتوي على بيانات صالحة!",
-    "invalidJson": "تنسيق الملف غير صالح! يرجى التأكد أنك رفعت ملف JSON فعلي.",
+    "invalidJson": "تنسيق ملف غير صالح! يرجى التحقق من أنك قمت بتحميل ملف JSON.",
     "anotherFile": "يرجى المحاولة مرة أخرى أو اختيار ملف آخر.",
-    "needPermission": "يرجى السماح بالوصول إلى وحدة التخزين."
+    "needPermission": "يرجى منح الإذن للوصول إلى التخزين."
   },
   "health": {
     "page": {
-      "title": "سجل الصحة"
+      "title": "مفكرة الصحة"
     },
     "form": {
       "title": "تسجيل بيانات الصحة اليومية",
       "date": "التاريخ",
-      "pulse": "نبض",
-      "systolic": "انقباضي",
-      "diastolic": "انبساطي",
-      "steps": "الخطوات",
-      "notes": "ملاحظات",
+      "pulse": "النبض",
+      "systolic": "الانقباضي",
+      "diastolic": "الانبساطي",
+      "steps": "عدد الخطوات",
+      "notes": "ملاحظة",
       "save": "حفظ",
       "clear": "مسح"
     },
@@ -159,12 +192,41 @@
       "title": "ملخص الصحة",
       "avgPulse": "متوسط النبض",
       "avgBP": "متوسط ضغط الدم",
-      "totalSteps": "إجمالي الخطوات",
-      "pulseChart": "النبض (30 يوم)",
-      "stepsChart": "الخطوات (30 يوم)",
-      "evaluationTitle": "التقييم المميز",
+      "totalSteps": "مجموع الخطوات",
+      "pulseChart": "النبض (30 يومًا)",
+      "stepsChart": "الخطوات (30 يومًا)",
+      "daily": "يومي",
+      "averageWithDays": "المتوسط ({days} يومًا)",
+      "evaluationTitle": "تقييم مميز",
       "noDataEvaluation": "لا توجد بيانات للتقييم",
-      "score": "الدرجة"
+      "selectedTitle": "التاريخ المحدد",
+      "noSelected": "لا توجد مدخلة محددة",
+      "dailyScore": "النتيجة اليومية",
+      "avgScore": "المتوسط العام",
+      "score": "النتيجة",
+      "unitBpm": "نبضة/دقيقة",
+      "unitSteps": "خطوة"
+    },
+    "evaluation": {
+      "pulse": {
+        "low": "نبض منخفض",
+        "high": "نبض مرتفع",
+        "ok": "معدل النبض طبيعي"
+      },
+      "bp": {
+        "danger": "ضغط مرتفع خطير",
+        "high": "ارتفاع ضغط الدم",
+        "low": "انخفاض ضغط الدم",
+        "ok": "ضغط الدم طبيعي"
+      },
+      "activity": {
+        "low": "نشاط منخفض",
+        "good": "نشاط جيد",
+        "ok": "نشاط"
+      },
+      "age": {
+        "highPulse": "معدل نبض مرتفع لدى كبار السن"
+      }
     }
   }
 }
