--- a/app/locales/ru-RU.json
+++ b/app/locales/ru-RU.json
@@ -1,39 +1,66 @@
 {
+  "pages": {
+    "auth": {
+      "login": "Войти",
+      "register": "Регистрация",
+      "goToRegister": "Зарегистрироваться",
+      "goToLogin": "Войти",
+      "email": "Электронная почта",
+      "password": "Пароль",
+      "passwordConfirm": "Подтверждение пароля",
+      "acceptPrivacy": "Я принимаю",
+      "privacyLink": "политику конфиденциальности",
+      "rememberMe": "Оставаться в системе",
+      "fillEmailPassword": "Пожалуйста, введите электронную почту и пароль.",
+      "loginFailed": "Ошибка входа.",
+      "loginSuccess": "Вход выполнен успешно.",
+      "logoutSuccess": "Выход выполнен успешно.",
+      "fillAll": "Пожалуйста, заполните все поля и примите политику конфиденциальности.",
+      "registerFailed": "Ошибка регистрации.",
+      "registerSuccess": "Регистрация прошла успешно."
+    }
+  },
   "components": {
+    "authModal": {
+      "title": "Войдите!",
+      "description": "После входа вы сможете легко сохранять и загружать свои данные между устройствами. Вам нужен только логин и пароль.",
+      "go": "Продолжить"
+    },
     "chatInterface": {
-      "placeholder": "Введите ваше сообщение..."
+      "placeholder": "Введите сообщение..."
     },
     "clickMenu": {
       "showForm": "Показать форму ввода данных",
       "showChat": "Показать чат"
     },
     "fileUpload": {
-      "title": "Загрузите ваши данные",
-      "upload": "Выберите файл или перетащите его сюда",
+      "title": "Загрузите свои данные",
+      "upload": "Выберите файл или перетащите сюда",
       "lastLoaded": "Последняя загрузка"
     },
     "header": {
-      "settings": "Настройки"
+      "settings": "Настройки",
+      "resetConfirmation": "Вы уверены, что хотите сбросить все настройки и данные?"
     },
     "optionalFields": {
       "heartRate": "Средний пульс",
-      "placeholderHeartRate": "напр.: 76",
-      "bloodPressure": "Среднее артериальное давление",
-      "placeholderBloodPressure": "напр.: 120/80",
-      "sports": "Виды спорта",
-      "placeholderSports": "напр.: Бег, Плавание",
+      "placeholderHeartRate": "например: 76",
+      "bloodPressure": "Среднее давление",
+      "placeholderBloodPressure": "например: 120/80",
+      "sports": "Спорт",
+      "placeholderSports": "например: Бег, плавание",
       "medications": "Лекарства",
-      "placeholderMedications": "напр.: Аспирин, Парацетамол",
+      "placeholderMedications": "например: Аспирин, Парацетамол",
       "chronicDiseases": "Хронические заболевания",
-      "placeholderChronicDiseases": "напр.: Гипертония, Диабет",
+      "placeholderChronicDiseases": "например: Гипертония, Диабет",
       "allergies": "Аллергии",
-      "placeholderAllergies": "напр.: Пыльца, Орехи",
+      "placeholderAllergies": "например: Пыльца, Орехи",
       "diet": "Диета",
-      "placeholderDiet": "напр.: Вегетарианская, Безглютеновая",
-      "waterIntake": "Суточное потребление воды (литры)",
-      "placeholderWaterIntake": "напр.: 2.5",
-      "familyHistory": "Семейный анамнез",
-      "placeholderFamilyHistory": "напр.: Сердечные заболевания, Рак",
+      "placeholderDiet": "например: Вегетарианская, Безглютеновая",
+      "waterIntake": "Ежедневное потребление воды (литры)",
+      "placeholderWaterIntake": "например: 2.5",
+      "familyHistory": "Семейная история заболеваний",
+      "placeholderFamilyHistory": "например: Сердечные болезни, Рак",
       "smoking": "Курение",
       "smokingOptions": {
         "selectPlaceholder": "Выберите привычку курения",
@@ -41,61 +68,67 @@
         "occasionally": "Иногда",
         "regularly": "Регулярно"
       },
-      "alcohol": "Потребление алкоголя",
+      "alcohol": "Употребление алкоголя",
       "alcoholOptions": {
-        "selectPlaceholder": "Выберите привычку потребления алкоголя",
+        "selectPlaceholder": "Выберите привычку употребления алкоголя",
         "never": "Никогда",
         "occasionally": "Иногда",
         "regularly": "Регулярно"
       },
-      "sleep": "Сон (часы/день)",
-      "placeholderSleep": "напр.: 7",
+      "sleep": "Сон (часов/день)",
+      "placeholderSleep": "например: 7",
       "physicalActivityLevel": "Уровень физической активности",
-      "placeholderPhysicalActivityLevel": "напр.: Низкий, Средний, Высокий",
+      "placeholderPhysicalActivityLevel": "например: Низкий, Средний, Высокий",
       "workType": "Тип работы",
-      "placeholderWorkType": "напр.: Офисная, Физическая, Смешанная",
+      "placeholderWorkType": "например: Офисная, Физическая, Смешанная",
       "stressLevel": "Уровень стресса",
-      "placeholderStressLevel": "напр.: Низкий, Средний, Высокий / 30, 60, 90",
+      "placeholderStressLevel": "например: Низкий, Средний, Высокий / 30, 60, 90",
       "mentalHealth": "Психическое здоровье",
-      "placeholderMentalHealth": "напр.: Депрессия, Тревожность",
+      "placeholderMentalHealth": "например: Депрессия, Тревожность",
       "cholesterolLevel": "Уровень холестерина",
-      "placeholderCholesterolLevel": "напр.: 200 мг/дл",
+      "placeholderCholesterolLevel": "например: 200 мг/дл",
       "bloodSugarLevel": "Уровень сахара в крови",
-      "placeholderBloodSugarLevel": "напр.: 100 мг/дл",
-      "supplements": "Пищевые добавки",
-      "placeholderSupplements": "напр.: Витамин D, Омега‑3",
-      "vaccinations": "Вакцинации",
-      "placeholderVaccinations": "напр.: Грипп, COVID‑19",
+      "placeholderBloodSugarLevel": "например: 100 мг/дл",
+      "supplements": "БАДы",
+      "placeholderSupplements": "например: Витамин D, Омега-3",
+      "vaccinations": "Прививки",
+      "placeholderVaccinations": "например: Грипп, COVID-19",
       "reproductiveHealth": "Репродуктивное здоровье",
-      "placeholderReproductiveHealth": "напр.: Менструальный цикл, Беременность",
+      "placeholderReproductiveHealth": "например: Менструация, Беременность",
       "visionAndHearing": "Зрение и слух",
-      "placeholderVisionAndHearing": "напр.: Близорукость, Потеря слуха",
+      "placeholderVisionAndHearing": "например: Близорукость, Потеря слуха",
       "sleepQuality": "Качество сна",
-      "placeholderSleepQuality": "напр.: Хорошее, Среднее, Плохое",
+      "placeholderSleepQuality": "например: Хорошее, Среднее, Плохое",
       "medicalRecords": "Медицинские записи",
-      "placeholderMedicalRecords": "напр.: Анализы крови, Рентген",
+      "placeholderMedicalRecords": "например: Анализ крови, Рентген",
       "medicalHistory": "Медицинская история",
-      "placeholderMedicalHistory": "напр.: Операции, Госпитализации"
+      "placeholderMedicalHistory": "например: Операции, Госпитализации"
     },
     "privacyModal": {
       "title": "Политика конфиденциальности",
-      "text1": "Предоставленные вами данные используются исключительно системой медицинских рекомендаций и не передаются третьим лицам. Данные не сохраняются — вы контролируете их и можете сохранить на своём устройстве.",
-      "text2": "Приняв политику конфиденциальности, вы соглашаетесь получать советы на основе введённой вами информации."
+      "text1": "Предоставленные вами данные используются исключительно системой медицинского консультанта и не передаются третьим лицам. Система не хранит ваши данные, вы управляете ими и можете сохранять их на своем устройстве.",
+      "text2": "Принимая условия конфиденциальности, вы соглашаетесь, что система будет давать советы на основе предоставленной информации."
+    },
+    "privacyModalAuth": {
+      "title": "Политика конфиденциальности",
+      "text1": "Предоставленные вами данные используются исключительно системой медицинского консультанта и не передаются третьим лицам. Данные хранятся в базе данных MongoDB, которая безопасно настроена и защищена от возможных атак.",
+      "text2": "Принимая условия конфиденциальности, вы соглашаетесь, что система будет давать советы на основе предоставленной информации."
     },
     "response": {
-      "title": "Ответ доктора Сановайза:",
+      "title": "Ответ Dr. Sanovise:",
       "analyzing": "Анализирую данные 📚🧠",
       "thinking": "Думаю 🤔"
     },
     "settingsModal": {
       "title": "Настройки",
       "selectLanguage": "Выберите язык:",
-      "selectAIModel": "Выберите AI-модель:",
+      "selectAIModel": "Выберите модель ИИ:",
       "version": "Версия",
-      "deleteAccount": "Delete account",
-      "deleteConfirm": "Are you sure you want to delete your account? This action is permanent.",
-      "deleteSuccess": "Account deleted",
-      "deleteError": "An error occurred while deleting the account"
+      "logout": "Выйти",
+      "deleteAccount": "Удалить аккаунт",
+      "deleteConfirm": "Вы уверены, что хотите удалить аккаунт? Это действие необратимо.",
+      "deleteSuccess": "Аккаунт удален",
+      "deleteError": "Ошибка при удалении аккаунта"
     },
     "userForm": {
       "requiredInfo": "Поля, отмеченные <span class='required'>*</span>, обязательны для заполнения!",
@@ -106,65 +139,94 @@
       "female": "Женский",
       "height": "Рост",
       "weight": "Вес",
-      "placeholderHeight": "напр.: 175",
-      "placeholderWeight": "напр.: 70",
+      "placeholderHeight": "например: 175",
+      "placeholderWeight": "например: 70",
       "showExtra": "Показать дополнительные данные",
       "hideExtra": "Скрыть дополнительные данные",
       "acceptPrivacy": "Я принимаю",
       "privacyLink": "политику конфиденциальности",
       "submitData": "Отправить данные",
-      "abort": "Не отвечать",
+      "abort": "Отмена",
       "exportData": "Экспорт данных",
-  "healthPage": "Перейти на страницу Здоровье",
-      "invalidHeight": "Рост должен быть от 50 до 300 см.",
-      "invalidWeight": "Вес должен быть от 1 до 500 кг.",
-      "invalidWaterIntake": "Потребление воды должно быть от 0 до 50 литров в день.",
+      "healthPage": "Страница здоровья",
+      "invalidHeight": "Рост должен быть от 50 см до 300 см.",
+      "invalidWeight": "Вес должен быть от 1 кг до 500 кг.",
+      "invalidWaterIntake": "Ежедневное потребление воды должно быть от 0 до 50 литров.",
       "invalidHeartRate": "Пульс должен быть от 30 до 250.",
       "invalidSleep": "Продолжительность сна должна быть от 0 до 24 часов.",
-      "invalidBloodPressure": "Формат давления должен быть: систолическое/диастолическое (напр.: 120/80)."
+      "invalidBloodPressure": "Давление должно быть в формате: систолическое/диастолическое (например: 120/80)."
     }
   },
   "global": {
     "successSave": "Успешно сохранено",
-    "autoSaveSuccess": "✅ Данные автоматически сохранены",
-    "autoSaveFailure": "⚠️ Автосохранение не удалось: {error}",
+    "autoSaveSuccess": "✅ Данные сохранены автоматически",
+    "autoSaveFailure": "⚠️ Ошибка автосохранения: {error}",
     "successShare": "Успешно отправлено",
     "errorSave": "Ошибка при сохранении.",
     "errorSend": "Ошибка при отправке данных",
-    "tryAgain": "Пожалуйста, попробуйте позже или обновите страницу.",
-    "emptyResponse": "Сервер не ответил. Возможно, соединение прервано.",
-    "networkError": "Ошибка сети — проверьте подключение к интернету!",
+    "tryAgain": "Пожалуйста, попробуйте снова позже или обновите страницу.",
+    "emptyResponse": "Сервер не ответил. Возможно, соединение прервалось.",
+    "networkError": "Сетевая ошибка – проверьте интернет-соединение!",
     "unknownError": "Произошла неизвестная ошибка. 😔",
-    "errorLoad": "Файл не содержит допустимых данных!",
-    "invalidJson": "Неверный формат файла! Убедитесь, что вы загрузили JSON-файл.",
-    "anotherFile": "Попробуйте снова или выберите другой файл.",
-    "needPermission": "Предоставьте доступ к хранилищу."
+    "errorLoad": "Файл не содержит корректных данных!",
+    "invalidJson": "Неверный формат файла! Пожалуйста, убедитесь, что вы загрузили JSON.",
+    "anotherFile": "Пожалуйста, попробуйте снова или выберите другой файл.",
+    "needPermission": "Пожалуйста, разрешите доступ к хранилищу."
   },
   "health": {
     "page": {
-      "title": "Журнал здоровья"
+      "title": "Дневник здоровья"
     },
     "form": {
-      "title": "Записать ежедневные данные о здоровье",
+      "title": "Запись ежедневных данных о здоровье",
       "date": "Дата",
       "pulse": "Пульс",
       "systolic": "Систолическое",
       "diastolic": "Диастолическое",
-      "steps": "Шаги",
-      "notes": "Заметки",
+      "steps": "Количество шагов",
+      "notes": "Заметка",
       "save": "Сохранить",
       "clear": "Очистить"
     },
     "dashboard": {
-      "title": "Сводка здоровья",
+      "title": "Обзор здоровья",
       "avgPulse": "Средний пульс",
       "avgBP": "Среднее давление",
       "totalSteps": "Всего шагов",
       "pulseChart": "Пульс (30 дней)",
       "stepsChart": "Шаги (30 дней)",
-      "evaluationTitle": "Выделенная оценка",
+      "daily": "Ежедневно",
+      "averageWithDays": "Среднее ({days} дней)",
+      "evaluationTitle": "Основная оценка",
       "noDataEvaluation": "Нет данных для оценки",
-      "score": "Оценка"
+      "selectedTitle": "Выбранная дата",
+      "noSelected": "Запись не выбрана",
+      "dailyScore": "Ежедневный балл",
+      "avgScore": "Средний балл",
+      "score": "Балл",
+      "unitBpm": "уд/мин",
+      "unitSteps": "шагов"
+    },
+    "evaluation": {
+      "pulse": {
+        "low": "Низкий пульс",
+        "high": "Высокий пульс",
+        "ok": "Пульс нормальный"
+      },
+      "bp": {
+        "danger": "Опасно высокое давление",
+        "high": "Высокое давление",
+        "low": "Низкое давление",
+        "ok": "Давление нормальное"
+      },
+      "activity": {
+        "low": "Мало активности",
+        "good": "Хорошая активность",
+        "ok": "Активность"
+      },
+      "age": {
+        "highPulse": "Высокий пульс в пожилом возрасте"
+      }
     }
   }
 }
