--- a/app/locales/hi-IN.json
+++ b/app/locales/hi-IN.json
@@ -1,11 +1,37 @@
 {
+  "pages": {
+    "auth": {
+      "login": "लॉगिन",
+      "register": "पंजीकरण",
+      "goToRegister": "पंजीकरण करें",
+      "goToLogin": "लॉगिन करें",
+      "email": "ईमेल",
+      "password": "पासवर्ड",
+      "passwordConfirm": "पासवर्ड दोहराएँ",
+      "acceptPrivacy": "मैं स्वीकार करता हूँ",
+      "privacyLink": "गोपनीयता नीति",
+      "rememberMe": "मुझे लॉगिन पर रखें",
+      "fillEmailPassword": "कृपया ईमेल और पासवर्ड भरें।",
+      "loginFailed": "लॉगिन असफल।",
+      "loginSuccess": "लॉगिन सफल।",
+      "logoutSuccess": "लॉगआउट सफल।",
+      "fillAll": "कृपया सभी फ़ील्ड भरें और गोपनीयता नीति स्वीकार करें।",
+      "registerFailed": "पंजीकरण असफल।",
+      "registerSuccess": "पंजीकरण सफल।"
+    }
+  },
   "components": {
+    "authModal": {
+      "title": "लॉगिन करें!",
+      "description": "यदि आप लॉगिन करते हैं, तो आप अपने डेटा को आसानी से सहेज और अपने उपकरणों के बीच लोड कर सकते हैं। इसके लिए केवल एक उपयोगकर्ता नाम और पासवर्ड की आवश्यकता है।",
+      "go": "जाएँ"
+    },
     "chatInterface": {
       "placeholder": "अपना संदेश लिखें..."
     },
     "clickMenu": {
-      "showForm": "डेटा इनपुट फ़ॉर्म दिखाएं",
-      "showChat": "चैट इंटरफ़ेस दिखाएं"
+      "showForm": "डेटा फ़ॉर्म दिखाएँ",
+      "showChat": "चैट इंटरफ़ेस दिखाएँ"
     },
     "fileUpload": {
       "title": "अपने डेटा अपलोड करें",
@@ -13,26 +39,27 @@
       "lastLoaded": "अंतिम बार लोड किया गया"
     },
     "header": {
-      "settings": "सेटिंग्स"
+      "settings": "सेटिंग्स",
+      "resetConfirmation": "क्या आप वास्तव में सभी सेटिंग्स और डेटा रीसेट करना चाहते हैं?"
     },
     "optionalFields": {
-      "heartRate": "औसत हृदय गति",
+      "heartRate": "औसत हृदय दर",
       "placeholderHeartRate": "उदा.: 76",
       "bloodPressure": "औसत रक्तचाप",
       "placeholderBloodPressure": "उदा.: 120/80",
       "sports": "खेल",
-      "placeholderSports": "उदा.: दौड़ना, तैराकी",
-      "medications": "दवाइयाँ",
-      "placeholderMedications": "उदा.: एस्पिरिन, पैरासिटामोल",
+      "placeholderSports": "उदा.: दौड़ना, तैरना",
+      "medications": "दवाएँ",
+      "placeholderMedications": "उदा.: एस्पिरिन, पेरासिटामोल",
       "chronicDiseases": "दीर्घकालिक बीमारियाँ",
       "placeholderChronicDiseases": "उदा.: उच्च रक्तचाप, मधुमेह",
       "allergies": "एलर्जी",
-      "placeholderAllergies": "उदा.: पराग, मेवा",
+      "placeholderAllergies": "उदा.: परागकण, मेवे",
       "diet": "आहार",
-      "placeholderDiet": "उदा.: शाकाहारी, ग्लूटेन मुक्त",
-      "waterIntake": "दैनिक पानी का सेवन (लीटर)",
+      "placeholderDiet": "उदा.: शाकाहारी, ग्लूटेन-फ्री",
+      "waterIntake": "दैनिक पानी की खपत (लीटर)",
       "placeholderWaterIntake": "उदा.: 2.5",
-      "familyHistory": "पारिवारिक रोग इतिहास",
+      "familyHistory": "पारिवारिक इतिहास",
       "placeholderFamilyHistory": "उदा.: हृदय रोग, कैंसर",
       "smoking": "धूम्रपान",
       "smokingOptions": {
@@ -41,7 +68,7 @@
         "occasionally": "कभी-कभी",
         "regularly": "नियमित रूप से"
       },
-      "alcohol": "शराब सेवन",
+      "alcohol": "शराब का सेवन",
       "alcoholOptions": {
         "selectPlaceholder": "शराब सेवन की आदत चुनें",
         "never": "कभी नहीं",
@@ -53,107 +80,113 @@
       "physicalActivityLevel": "शारीरिक गतिविधि स्तर",
       "placeholderPhysicalActivityLevel": "उदा.: कम, मध्यम, उच्च",
       "workType": "काम का प्रकार",
-      "placeholderWorkType": "उदा.: कार्यालय, शारीरिक, मिश्रित",
+      "placeholderWorkType": "उदा.: दफ़्तर, शारीरिक, मिश्रित",
       "stressLevel": "तनाव स्तर",
       "placeholderStressLevel": "उदा.: कम, मध्यम, उच्च / 30, 60, 90",
       "mentalHealth": "मानसिक स्वास्थ्य",
       "placeholderMentalHealth": "उदा.: अवसाद, चिंता",
       "cholesterolLevel": "कोलेस्ट्रॉल स्तर",
       "placeholderCholesterolLevel": "उदा.: 200 mg/dL",
-      "bloodSugarLevel": "रक्त शर्करा स्तर",
+      "bloodSugarLevel": "ब्लड शुगर स्तर",
       "placeholderBloodSugarLevel": "उदा.: 100 mg/dL",
-      "supplements": "पूरक आहार",
-      "placeholderSupplements": "उदा.: विटामिन D, ओमेगा‑3",
+      "supplements": "सप्लीमेंट्स",
+      "placeholderSupplements": "उदा.: विटामिन D, ओमेगा-3",
       "vaccinations": "टीकाकरण",
-      "placeholderVaccinations": "उदा.: फ्लू, COVID‑19",
+      "placeholderVaccinations": "उदा.: फ्लू, COVID-19",
       "reproductiveHealth": "प्रजनन स्वास्थ्य",
       "placeholderReproductiveHealth": "उदा.: मासिक धर्म चक्र, गर्भावस्था",
       "visionAndHearing": "दृष्टि और श्रवण",
-      "placeholderVisionAndHearing": "उदा.: निकट दृष्टि दोष, सुनने में कमी",
+      "placeholderVisionAndHearing": "उदा.: निकट दृष्टि दोष, श्रवण हानि",
       "sleepQuality": "नींद की गुणवत्ता",
-      "placeholderSleepQuality": "उदा.: अच्छी, सामान्य, खराब",
-      "medicalRecords": "चिकित्सा रिकॉर्ड",
+      "placeholderSleepQuality": "उदा.: अच्छा, मध्यम, खराब",
+      "medicalRecords": "चिकित्सा रिपोर्ट",
       "placeholderMedicalRecords": "उदा.: रक्त परीक्षण, एक्स-रे",
       "medicalHistory": "चिकित्सा इतिहास",
       "placeholderMedicalHistory": "उदा.: सर्जरी, अस्पताल में भर्ती"
     },
     "privacyModal": {
       "title": "हमारी गोपनीयता नीति",
-      "text1": "आपके द्वारा प्रदान की गई जानकारी केवल स्वास्थ्य परामर्श प्रणाली द्वारा उपयोग की जाती है और किसी तीसरे पक्ष के साथ साझा नहीं की जाती। आपकी जानकारी को सिस्टम द्वारा संग्रहीत नहीं किया जाता — आप इसे स्वयं प्रबंधित कर सकते हैं और अपने डिवाइस पर सहेज सकते हैं।",
-      "text2": "गोपनीयता नीति को स्वीकार करके, आप सहमति देते हैं कि प्रणाली आपके द्वारा दी गई जानकारी के आधार पर सलाह प्रदान कर सकती है।"
+      "text1": "आपके द्वारा प्रदान किए गए डेटा का उपयोग केवल स्वास्थ्य सलाह प्रणाली द्वारा किया जाएगा और इसे किसी तीसरे पक्ष के साथ साझा नहीं किया जाएगा। आपका डेटा संग्रहीत नहीं किया जाता है, आप इसे स्वयं प्रबंधित कर सकते हैं और अपने डिवाइस पर सुरक्षित कर सकते हैं।",
+      "text2": "गोपनीयता शर्तों को स्वीकार करके, आप सहमति देते हैं कि हमारी प्रणाली आपकी जानकारी के आधार पर सलाह प्रदान कर सकती है।"
+    },
+    "privacyModalAuth": {
+      "title": "हमारी गोपनीयता नीति",
+      "text1": "आपके द्वारा प्रदान किए गए डेटा का उपयोग केवल स्वास्थ्य सलाह प्रणाली द्वारा किया जाएगा और इसे किसी तीसरे पक्ष के साथ साझा नहीं किया जाएगा। आपका डेटा MongoDB डेटाबेस में संग्रहीत किया जाता है, जो सुरक्षित रूप से कॉन्फ़िगर किया गया है और संभावित हमलों से संरक्षित है।",
+      "text2": "गोपनीयता शर्तों को स्वीकार करके, आप सहमति देते हैं कि हमारी प्रणाली आपकी जानकारी के आधार पर सलाह प्रदान कर सकती है।"
     },
     "response": {
-      "title": "डॉ. सानोवाइज़ का उत्तर:",
+      "title": "डॉ. Sanovise का उत्तर:",
       "analyzing": "डेटा का विश्लेषण कर रहा हूँ 📚🧠",
       "thinking": "सोच रहा हूँ 🤔"
     },
     "settingsModal": {
       "title": "सेटिंग्स",
       "selectLanguage": "अपनी पसंदीदा भाषा चुनें:",
-      "selectAIModel": "अपना पसंदीदा एआई मॉडल चुनें:",
+      "selectAIModel": "अपना पसंदीदा AI मॉडल चुनें:",
       "version": "संस्करण",
-      "deleteAccount": "Delete account",
-      "deleteConfirm": "Are you sure you want to delete your account? This action is permanent.",
-      "deleteSuccess": "Account deleted",
-      "deleteError": "An error occurred while deleting the account"
+      "logout": "लॉगआउट",
+      "deleteAccount": "खाता हटाएँ",
+      "deleteConfirm": "क्या आप वाकई अपना खाता हटाना चाहते हैं? यह अंतिम है।",
+      "deleteSuccess": "खाता हटाया गया",
+      "deleteError": "खाता हटाते समय त्रुटि हुई"
     },
     "userForm": {
-      "requiredInfo": "<span class='required'>*</span> चिह्नित फ़ील्ड आवश्यक हैं!",
+      "requiredInfo": "<span class='required'>*</span> से चिह्नित फ़ील्ड अनिवार्य हैं!",
       "birthDate": "जन्म तिथि",
       "gender": "लिंग",
       "selectGender": "लिंग चुनें",
       "male": "पुरुष",
       "female": "महिला",
-      "height": "ऊंचाई",
-      "weight": "वज़न",
+      "height": "लंबाई",
+      "weight": "वजन",
       "placeholderHeight": "उदा.: 175",
       "placeholderWeight": "उदा.: 70",
-      "showExtra": "अतिरिक्त डेटा दिखाएं",
-      "hideExtra": "अतिरिक्त डेटा छिपाएं",
-      "acceptPrivacy": "मैं स्वीकार करता/करती हूँ",
+      "showExtra": "अधिक डेटा दिखाएँ",
+      "hideExtra": "अधिक डेटा छिपाएँ",
+      "acceptPrivacy": "मैं स्वीकार करता हूँ",
       "privacyLink": "गोपनीयता नीति",
       "submitData": "डेटा सबमिट करें",
       "abort": "उत्तर न दें",
       "exportData": "डेटा निर्यात करें",
-  "healthPage": "स्वास्थ्य पृष्ठ पर जाएँ",
-      "invalidHeight": "ऊंचाई 50 से 300 सेमी के बीच होनी चाहिए।",
-      "invalidWeight": "वज़न 1 से 500 किग्रा के बीच होना चाहिए।",
-      "invalidWaterIntake": "दैनिक पानी का सेवन 0 से 50 लीटर के बीच होना चाहिए।",
-      "invalidHeartRate": "हृदय गति 30 से 250 के बीच होनी चाहिए।",
-      "invalidSleep": "नींद की अवधि 0 से 24 घंटे के बीच होनी चाहिए।",
-      "invalidBloodPressure": "रक्तचाप का फ़ॉर्मेट systole/diastole होना चाहिए (उदा.: 120/80)।"
+      "healthPage": "स्वास्थ्य पृष्ठ",
+      "invalidHeight": "लंबाई 50 सेमी और 300 सेमी के बीच होनी चाहिए।",
+      "invalidWeight": "वजन 1 किग्रा और 500 किग्रा के बीच होना चाहिए।",
+      "invalidWaterIntake": "दैनिक पानी की खपत 0 और 50 लीटर के बीच होनी चाहिए।",
+      "invalidHeartRate": "हृदय दर 30 और 250 के बीच होनी चाहिए।",
+      "invalidSleep": "नींद का समय 0 से 24 घंटे के बीच होना चाहिए।",
+      "invalidBloodPressure": "रक्तचाप इस प्रारूप में होना चाहिए: सिस्टोल/डायस्टोल (उदा.: 120/80)।"
     }
   },
   "global": {
     "successSave": "सफलतापूर्वक सहेजा गया",
-    "autoSaveSuccess": "✅ Data automatically saved",
-    "autoSaveFailure": "⚠️ Automatic save failed: {error}",
+    "autoSaveSuccess": "✅ डेटा स्वचालित रूप से सहेजा गया",
+    "autoSaveFailure": "⚠️ स्वचालित सहेजना असफल: {error}",
     "successShare": "सफलतापूर्वक भेजा गया",
-    "errorSave": "सेव करते समय त्रुटि हुई।",
-    "errorSend": "डेटा भेजते समय त्रुटि हुई।",
-    "tryAgain": "कृपया बाद में पुनः प्रयास करें या पेज रीफ़्रेश करें।",
-    "emptyResponse": "सर्वर से कोई प्रतिक्रिया नहीं मिली। कनेक्शन टूट गया हो सकता है।",
-    "networkError": "नेटवर्क त्रुटि – कृपया अपना इंटरनेट कनेक्शन जांचें!",
-    "unknownError": "अज्ञात त्रुटि हुई। 😔",
+    "errorSave": "सहेजते समय त्रुटि हुई।",
+    "errorSend": "डेटा भेजते समय त्रुटि हुई",
+    "tryAgain": "कृपया बाद में पुनः प्रयास करें या पृष्ठ रीफ़्रेश करें।",
+    "emptyResponse": "सर्वर ने कोई उत्तर नहीं भेजा। कनेक्शन बाधित हो सकता है।",
+    "networkError": "नेटवर्क त्रुटि – कृपया अपना इंटरनेट कनेक्शन जाँचें!",
+    "unknownError": "एक अज्ञात त्रुटि हुई। 😔",
     "errorLoad": "फ़ाइल में मान्य डेटा नहीं है!",
-    "invalidJson": "अमान्य फ़ाइल प्रारूप! कृपया सुनिश्चित करें कि आपने JSON फ़ाइल अपलोड की है।",
-    "anotherFile": "कृपया पुनः प्रयास करें या कोई दूसरी फ़ाइल चुनें।",
-    "needPermission": "कृपया स्टोरेज एक्सेस की अनुमति दें।"
+    "invalidJson": "अमान्य फ़ाइल प्रारूप! कृपया सुनिश्चित करें कि आपने JSON अपलोड किया है।",
+    "anotherFile": "कृपया पुनः प्रयास करें या कोई अन्य फ़ाइल चुनें।",
+    "needPermission": "कृपया स्टोरेज तक पहुंच की अनुमति दें।"
   },
   "health": {
     "page": {
-      "title": "स्वास्थ्य लॉग"
+      "title": "स्वास्थ्य डायरी"
     },
     "form": {
       "title": "दैनिक स्वास्थ्य डेटा रिकॉर्ड करें",
       "date": "तिथि",
       "pulse": "नाड़ी",
       "systolic": "सिस्टोलिक",
-      "diastolic": "डायास्टोलिक",
+      "diastolic": "डायस्टोलिक",
       "steps": "कदम",
-      "notes": "नोट्स",
+      "notes": "नोट",
       "save": "सहेजें",
-      "clear": "साफ़ करें"
+      "clear": "हटाएँ"
     },
     "dashboard": {
       "title": "स्वास्थ्य सारांश",
@@ -162,9 +195,38 @@
       "totalSteps": "कुल कदम",
       "pulseChart": "नाड़ी (30 दिन)",
       "stepsChart": "कदम (30 दिन)",
-      "evaluationTitle": "हाइलाइट मूल्यांकन",
-        "noDataEvaluation": "मूल्यांकन के लिए कोई डेटा नहीं",
-        "score": "स्कोर"
+      "daily": "दैनिक",
+      "averageWithDays": "औसत ({days} दिन)",
+      "evaluationTitle": "विशेष मूल्यांकन",
+      "noDataEvaluation": "मूल्यांकन के लिए डेटा उपलब्ध नहीं",
+      "selectedTitle": "चयनित तिथि",
+      "noSelected": "कोई प्रविष्टि चयनित नहीं",
+      "dailyScore": "दैनिक स्कोर",
+      "avgScore": "औसत स्कोर",
+      "score": "स्कोर",
+      "unitBpm": "bpm",
+      "unitSteps": "कदम"
+    },
+    "evaluation": {
+      "pulse": {
+        "low": "निम्न नाड़ी",
+        "high": "उच्च नाड़ी",
+        "ok": "नाड़ी सामान्य"
+      },
+      "bp": {
+        "danger": "खतरनाक उच्च रक्तचाप",
+        "high": "उच्च रक्तचाप",
+        "low": "निम्न रक्तचाप",
+        "ok": "रक्तचाप सामान्य"
+      },
+      "activity": {
+        "low": "कम गतिविधि",
+        "good": "अच्छी गतिविधि",
+        "ok": "गतिविधि"
+      },
+      "age": {
+        "highPulse": "बुज़ुर्ग अवस्था में उच्च नाड़ी"
+      }
     }
   }
 }
